--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -1,13 +1,39 @@
 .faq {
-  padding-top: 120px;
-  padding-bottom: 120px;
   background-color: $subscription-color;
+  padding-top: 70px;
+  padding-bottom: 70px;
+
+  @media (min-width: $vp-768) {
+    padding-top: 100px;
+    padding-bottom: 90px;
+  }
+
+  @media (min-width: $vp-1200) {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
 
 .faq__wrapper {
-  display: grid;
-  grid-template-columns: 260px 1fr;
-  gap: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+
+  @media (min-width: $vp-768) {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+
+  @media (min-width: $vp-1200) {
+    display: grid;
+    grid-template-columns: 260px 1fr;
+    gap: 40px;
+  }
+}
+
+.faq__container {
+  height: 100%;
 }
 
 .faq__title {
@@ -20,14 +46,14 @@
   text-align: center;
   font-size: 32px;
   letter-spacing: 0.96px;
-  padding-bottom: 42px;
+  padding-bottom: 30px;
   padding-left: 15px;
 
   @media (min-width: $vp-768) {
     font-size: 42px;
     letter-spacing: 1.26px;
-    padding-bottom: 26px;
-    padding-left: 45px;
+    padding-bottom: 39px;
+    margin-left: -16px;
   }
 
   @media (min-width: $vp-1200) {
@@ -35,19 +61,31 @@
     letter-spacing: 1.62px;
     font-size: 54px;
     padding-bottom: 38px;
-    padding-left: 103px;
+    padding-left: 118px;
   }
 }
 
 .faq__list {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  grid-row-gap: 6px;
+
+  @media (min-width: $vp-768) {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+  }
+
+  @media (min-width: $vp-1200) {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
 }
 
 .faq__tab {
   margin: 0;
-  padding: 18px;
+  padding: 13px 18px;
   background-color: inherit;
   border: 1px solid rgba(16, 38, 84, 0.2);
   color: $gym-color;
@@ -60,9 +98,17 @@
 
   &.is-active {
     border: none;
-    padding: 19px;
+    padding: 14px 19px;
     color: $color-default-white;
     background: var(--1, linear-gradient(151deg, #ed0233 0%, #003eb7 100%));
+  }
+
+  @media (min-width: $vp-768) {
+    padding: 18px;
+
+    &.is-active {
+      padding: 19px;
+    }
   }
 }
 
@@ -77,14 +123,32 @@
 
 .faq__acc-item {
   border-top: 1px solid rgba(28, 51, 116, 0.2);
-  padding-bottom: 31px;
+  padding-bottom: 22px;
+
+  @media (min-width: $vp-768) {
+    padding-bottom: 31px;
+  }
 
   &:last-of-type {
     border-bottom: 1px solid rgba(28, 51, 116, 0.2);
   }
 
   &.is-active {
-    padding-bottom: 24px;
+    padding-bottom: 20px;
+
+    @media (min-width: $vp-768) {
+      padding-bottom: 24px;
+    }
+
+    .faq__acc-wrap {
+      .faq__acc-click {
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32' fill='none'%3E%3Ccircle cx='16' cy='16' r='15.5' fill='%231C3374' stroke='%231C3374'/%3E%3Cpath d='M22 16H16H10' stroke='white'/%3E%3C/svg%3E");
+
+        @media (min-width: $vp-768) {
+          background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='42' height='42' viewBox='0 0 42 42' fill='none'%3E%3Ccircle cx='21' cy='21' r='20.5' fill='%231C3374' stroke='%231C3374'/%3E%3Cpath d='M30 21H21H12' stroke='white'/%3E%3C/svg%3E");
+        }
+      }
+    }
   }
 }
 
@@ -95,39 +159,79 @@
 }
 
 .faq__acc-button {
-  display: block;
+  display: inline-block;
   position: relative;
   margin: 0;
   padding: 0;
   background-color: inherit;
   color: $gym-color;
-  font-size: 24px;
-  font-style: normal;
+  padding-top: 18px;
+  letter-spacing: 0.1px;
+  text-align: start;
+  width: 78%;
+  font-size: 18px;
   font-weight: 500;
   line-height: 120%;
-  padding-top: 32px;
-  letter-spacing: 0.1px;
+
+  @media (min-width: $vp-768) {
+    padding-top: 30px;
+    width: 90%;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 120%;
+  }
+
+  @media (min-width: $vp-1200) {
+    padding-top: 32px;
+  }
 }
 
 .faq__acc-click {
-  height: 42px;
-  width: 42px;
-  margin-bottom: -6px;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='42' height='42' viewBox='0 0 42 42' fill='none'%3E%3Ccircle cx='21' cy='21' r='20.5' stroke='%231C3374'/%3E%3Cpath d='M21 12V21M21 30V21M21 21H30M21 21H12' stroke='%231C3374'/%3E%3C/svg%3E");
+  height: 32px;
+  width: 32px;
+  align-self: center;
+  margin-bottom: -18px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32' fill='none'%3E%3Ccircle cx='16' cy='16' r='15.5' stroke='%231C3374'/%3E%3Cpath d='M16 10V16M16 22V16M16 16H22M16 16H10' stroke='%231C3374'/%3E%3C/svg%3E");
 
-  &--open {
-    background-image: url("data:image/svg+xml,%3Csvg width='42' height='42' viewBox='0 0 42 42' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='21' cy='21' r='20.5' fill='%231C3374' stroke='%231C3374'/%3E%3Cpath d='M30 21H21H12' stroke='white'/%3E%3C/svg%3E%0A");
+  @media (min-width: $vp-768) {
+    margin-bottom: -29px;
+    height: 42px;
+    width: 42px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='42' height='42' viewBox='0 0 42 42' fill='none'%3E%3Ccircle cx='21' cy='21' r='20.5' stroke='%231C3374'/%3E%3Cpath d='M21 12V21M21 30V21M21 21H30M21 21H12' stroke='%231C3374'/%3E%3C/svg%3E");
+  }
+  &:hover,
+  &:focus {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32' fill='none'%3E%3Ccircle cx='16' cy='16' r='15.5' fill='%23102654'/%3E%3Cpath d='M16 10V16M16 22V16M16 16H22M16 16H10' stroke='white'/%3E%3C/svg%3E");
+
+    @media (min-width: $vp-768) {
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='42' height='42' viewBox='0 0 42 42' fill='none'%3E%3Ccircle cx='21' cy='21' r='21' fill='%23102654'/%3E%3Cpath d='M21 12V21M21 30V21M21 21H30M21 21H12' stroke='white'/%3E%3C/svg%3E");
+    }
+  }
+
+  &:disabled {
+    opacity: 0.3;
   }
 }
 
 .faq__acc-text {
   margin: 0;
   padding: 0;
-  padding-top: 15px;
-  padding-right: 203px;
+  padding-top: 12px;
+  padding-right: 18px;
   color: $gym-color;
-  font-size: 18px;
   font-style: normal;
   font-weight: 300;
   line-height: 140%;
+  font-size: 16px;
+
+  @media (min-width: $vp-768) {
+    padding-top: 12px;
+    padding-right: 157px;
+    font-size: 18px;
+  }
+
+  @media (min-width: $vp-1200) {
+    padding-top: 15px;
+    padding-right: 203px;
+  }
 }
