--- a/source/sass/blocks/main-banner.scss
+++ b/source/sass/blocks/main-banner.scss
@@ -160,7 +160,8 @@
   white-space: nowrap;
   transition: $trans-default;
 
-  &:hover {
+  &:hover,
+  &:focus-visible {
     color: $price;
     background-color: $color-default-white;
   }
