--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -36,7 +36,10 @@
 @import 'blocks/features';
 @import 'blocks/promo';
 @import 'blocks/faq';
-@import 'blocks/review'; // ---------------------------------
+@import 'blocks/review';
+@import 'blocks/contacts-form';
+
+// ---------------------------------
 
 // ❗❗❗ запрещено использовать изображения в css, касается как jpg \ png, так и svg
 
