--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -21,6 +21,7 @@ $spindle: #b6bdcc;
 $ghost-white: #f8f9fc;
 $percian-blue: #2e35ac;
 $resolution-blue: #1c3374;
+$dark-grey: #74819c;
 
 // Gradient
 
