--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -245,6 +245,10 @@
       padding-bottom: 67px;
     }
   }
+
+  @media (min-width: $vp-1200) {
+    padding-bottom: 68px;
+  }
 }
 
 .promo__block-link {
