--- a/css/style.css
+++ b/css/style.css
@@ -3503,6 +3503,10 @@ button,
   }
 
   .features__item--center {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -ms-grid-row: 2;
     grid-row-start: 2;
     -ms-grid-column: 1;
@@ -4152,6 +4156,10 @@ button,
   }
 
   .features__item--center {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -ms-grid-column: 2;
     grid-column-start: 2;
     -ms-grid-row: 1;
