--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -2,13 +2,16 @@
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
-  padding: 0 103px;
+  padding-left: 103px;
+  padding-right: 103px;
 
   @include vp-1023 {
-    padding: 0 45px;
+    padding-left: 45px;
+    padding-right: 45px;
   }
 
   @include vp-767 {
-    padding: 0 16px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
