--- a/css/style.css
+++ b/css/style.css
@@ -734,7 +734,8 @@ button,
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
-  padding: 0 103px;
+  padding-left: 103px;
+  padding-right: 103px;
 }
 
 .btn {
@@ -4359,13 +4360,15 @@ button,
 
 @media (max-width: 1023px) {
   .container {
-    padding: 0 45px;
+    padding-left: 45px;
+    padding-right: 45px;
   }
 }
 
 @media (max-width: 767px) {
   .container {
-    padding: 0 16px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 
   .modal__wrapper {
