--- a/css/style.css
+++ b/css/style.css
@@ -2283,6 +2283,21 @@ button,
   -webkit-text-fill-color: transparent;
 }
 
+.features__number-center {
+  margin: 0;
+  padding: 0;
+  line-height: 90%;
+  font-weight: 700;
+  background: #ffffff;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 74px;
+  font-weight: 700;
+  text-align: center;
+  color: #ffffff;
+}
+
 .features__small-text {
   margin: 0;
   padding: 0;
@@ -2314,6 +2329,29 @@ button,
   padding: 0 46px;
 }
 
+.features__text-center {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 140%;
+  padding: 0 12px;
+  color: #ffffff;
+  text-align: center;
+}
+
+.features__subtitle-center {
+  color: #ffffff;
+  text-align: center;
+  letter-spacing: 1px;
+  padding-bottom: 11px;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 150%;
+}
+
 .features__item--center {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -2340,29 +2378,6 @@ button,
 .features__item--year {
   -ms-grid-row: 5;
   grid-row-start: 5;
-}
-
-.features__number--center {
-  background: #ffffff;
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 74px;
-  font-weight: 700;
-  text-align: center;
-  color: #ffffff;
-}
-
-.features__subtitle--center {
-  color: #ffffff;
-  text-align: center;
-  letter-spacing: 1px;
-  padding-bottom: 11px;
-}
-
-.features__text--center {
-  color: #ffffff;
-  text-align: center;
 }
 
 .promo {
@@ -2708,6 +2723,8 @@ button,
 .review {
   padding-top: 62px;
   padding-bottom: 70px;
+  padding-left: 15px;
+  padding-right: 15px;
   position: relative;
 }
 
@@ -3489,6 +3506,12 @@ button,
     line-height: 90%;
   }
 
+  .features__number-center {
+    text-align: center;
+    line-height: 113%;
+    padding-left: 36px;
+  }
+
   .features__small-text {
     text-align: start;
   }
@@ -3501,6 +3524,16 @@ button,
     padding: 0;
     text-align: start;
     padding-right: 16px;
+  }
+
+  .features__text-center {
+    text-align: center;
+  }
+
+  .features__subtitle-center {
+    text-align: center;
+    color: #ffffff;
+    padding-bottom: 17px;
   }
 
   .features__item--center {
@@ -3540,15 +3573,6 @@ button,
     grid-row-start: 3;
     -ms-grid-column: 2;
     grid-column-start: 2;
-  }
-
-  .features__number--center {
-    line-height: 113%;
-    padding-left: 36px;
-  }
-
-  .features__subtitle--center {
-    padding-bottom: 17px;
   }
 
   .features__text--right {
@@ -4147,6 +4171,12 @@ button,
     font-weight: 700;
   }
 
+  .features__number-center {
+    text-align: center;
+    line-height: 124%;
+    padding-left: 27px;
+  }
+
   .features__subtitle {
     font-size: 22px;
     line-height: 170%;
@@ -4154,6 +4184,15 @@ button,
 
   .features__text {
     padding: 0;
+  }
+
+  .features__subtitle-center {
+    text-align: center;
+    color: #ffffff;
+    padding-bottom: 30px;
+    letter-spacing: 2px;
+    font-size: 22px;
+    line-height: 170%;
   }
 
   .features__item--center {
@@ -4188,16 +4227,6 @@ button,
     grid-column-start: 3;
     -ms-grid-row: 2;
     grid-row-start: 2;
-  }
-
-  .features__number--center {
-    line-height: 124%;
-    padding-left: 27px;
-  }
-
-  .features__subtitle--center {
-    padding-bottom: 30px;
-    letter-spacing: 2px;
   }
 
   .promo {
