--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -1,6 +1,8 @@
 .review {
   padding-top: 62px;
   padding-bottom: 70px;
+  padding-left: 15px;
+  padding-right: 15px;
   position: relative;
 
   @media (min-width: $vp-768) {
