--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -114,6 +114,32 @@
   }
 }
 
+.features__number-center {
+  margin: 0;
+  padding: 0;
+  line-height: 90%;
+  font-weight: 700;
+  background: $color-default-white;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 74px;
+  font-weight: 700;
+  text-align: center;
+  color: $color-default-white;
+
+  @media (min-width: $vp-768) {
+    text-align: center;
+    line-height: 113%;
+    padding-left: 36px;
+  }
+
+  @media (min-width: $vp-1200) {
+    text-align: center;
+    line-height: 124%;
+    padding-left: 27px;
+  }
+}
+
 .features__small-text {
   margin: 0;
   padding: 0;
@@ -168,6 +194,48 @@
 
   @media (min-width: $vp-1200) {
     padding: 0;
+  }
+}
+
+.features__text-center {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 140%;
+  padding: 0 12px;
+  color: $color-default-white;
+  text-align: center;
+
+  @media (min-width: $vp-768) {
+    text-align: center;
+  }
+}
+
+.features__subtitle-center {
+  color: $color-default-white;
+  text-align: center;
+  letter-spacing: 1px;
+  padding-bottom: 11px;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 150%;
+
+  @media (min-width: $vp-768) {
+    text-align: center;
+    color: $color-default-white;
+    padding-bottom: 17px;
+  }
+
+  @media (min-width: $vp-1200) {
+    text-align: center;
+    color: $color-default-white;
+    padding-bottom: 30px;
+    letter-spacing: 2px;
+    font-size: 22px;
+    line-height: 170%;
   }
 }
 
@@ -242,52 +310,8 @@
   }
 }
 
-.features__number--center {
-  background: $color-default-white;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 74px;
-  font-weight: 700;
-  text-align: center;
-  color: $color-default-white;
-
-  @media (min-width: $vp-768) {
-    line-height: 113%;
-    padding-left: 36px;
-  }
-
-  @media (min-width: $vp-1200) {
-    line-height: 124%;
-    padding-left: 27px;
-  }
-}
-
-.features__subtitle--center {
-  color: $color-default-white;
-  text-align: center;
-  letter-spacing: 1px;
-  padding-bottom: 11px;
-
-  @media (min-width: $vp-768) {
-    padding-bottom: 17px;
-  }
-
-  @media (min-width: $vp-1200) {
-    padding-bottom: 30px;
-    letter-spacing: 2px;
-  }
-}
-
-.features__text--center {
-  color: $color-default-white;
-  text-align: center;
-}
-
 .features__text--right {
   @media (min-width: $vp-768) {
     margin-right: -8px;
-  }
-
-  @media (min-width: $vp-1200) {
   }
 }
