--- a/css/style.css
+++ b/css/style.css
@@ -2165,8 +2165,8 @@ button,
 .trainers__wrapper-info {
   display: block;
   position: absolute;
-  padding: 57px;
-  padding-top: 51px;
+  padding: 13px;
+  padding-top: 20px;
   padding-right: 40px;
   padding-left: 46px;
   top: 0;
@@ -2191,7 +2191,7 @@ button,
   padding: 0;
   margin: 0;
   text-align: start;
-  padding-top: 30px;
+  padding-top: 10px;
   padding-left: 25px;
 }
 
@@ -3454,8 +3454,13 @@ button,
   }
 
   .trainers__wrapper-info {
+    padding-top: 51px;
     width: 260px;
     height: 294px;
+  }
+
+  .trainers__list {
+    padding-top: 30px;
   }
 
   .trainers__button {
