--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -119,9 +119,6 @@
   padding: 0;
   line-height: 90%;
   font-weight: 700;
-  background: $color-default-white;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   font-size: 74px;
   font-weight: 700;
   text-align: center;
@@ -199,7 +196,6 @@
 
 .features__text-center {
   margin: 0;
-  padding: 0;
   font-size: 16px;
   font-weight: 300;
   line-height: 140%;
@@ -209,6 +205,7 @@
 
   @media (min-width: $vp-768) {
     text-align: center;
+    padding: 0 2px;
   }
 }
 
