--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,43 +1,43 @@
 // Vendor
 // ---------------------------------
 
-@import 'vendor/normalize';
-@import 'data-tabs.scss';
-@import 'tabs.scss';
-@import 'data-accordion.scss';
-@import 'accordion.scss';
+@import "vendor/normalize";
+@import "data-tabs.scss";
+@import "tabs.scss";
+@import "data-accordion.scss";
+@import "accordion.scss";
 // Swiper 7.4.1
-// @import "vendor/swiper";
+@import "vendor/swiper";
 // Global
 // ---------------------------------
-@import 'variables';
-@import 'mixins';
-@import 'global/fonts';
-@import 'global/reboot';
-@import 'global/utils';
-@import 'global/container';
+@import "variables";
+@import "mixins";
+@import "global/fonts";
+@import "global/reboot";
+@import "global/utils";
+@import "global/container";
 
 // Blocks
 // ---------------------------------
 
-@import 'blocks/btn';
-@import 'blocks/modal';
-@import 'blocks/custom-input';
-@import 'blocks/custom-toggle';
-@import 'blocks/custom-select';
-@import 'blocks/header';
-@import 'blocks/footer';
-@import 'blocks/main-banner';
-@import 'blocks/gym';
-@import 'blocks/subscription';
-@import 'blocks/competition';
-@import 'blocks/swiper';
-@import 'blocks/trainers';
-@import 'blocks/features';
-@import 'blocks/promo';
-@import 'blocks/faq';
-@import 'blocks/review';
-@import 'blocks/contacts-form';
+@import "blocks/btn";
+@import "blocks/modal";
+@import "blocks/custom-input";
+@import "blocks/custom-toggle";
+@import "blocks/custom-select";
+@import "blocks/header";
+@import "blocks/footer";
+@import "blocks/main-banner";
+@import "blocks/gym";
+@import "blocks/subscription";
+@import "blocks/competition";
+@import "blocks/swiper";
+@import "blocks/trainers";
+@import "blocks/features";
+@import "blocks/promo";
+@import "blocks/faq";
+@import "blocks/review";
+@import "blocks/contacts-form";
 
 // ---------------------------------
 
