--- a/source/sass/blocks/competition.scss
+++ b/source/sass/blocks/competition.scss
@@ -7,6 +7,7 @@
   @media (min-width: $vp-768) {
     padding-top: 107px;
   }
+
   @media (min-width: $vp-1200) {
     padding-top: 120px;
   }
@@ -19,6 +20,7 @@
   @media (min-width: $vp-768) {
     padding: 12px 44px;
   }
+
   @media (min-width: $vp-1200) {
     padding: 41px 78px;
   }
@@ -31,6 +33,7 @@
   @media (min-width: $vp-768) {
     flex-direction: row;
   }
+
   @media (min-width: $vp-1200) {
     flex-direction: row;
   }
@@ -47,6 +50,7 @@
     justify-content: start;
     margin-top: 35px;
   }
+
   @media (min-width: $vp-1200) {
     gap: 60px;
     padding-bottom: 12px;
@@ -62,7 +66,7 @@
   font-size: 48px;
   letter-spacing: 1.44px;
   text-transform: uppercase;
-  font-family: 'Alumni Sans', 'Arial', sans-serif;
+  font-family: "Alumni Sans", "Arial", sans-serif;
   color: $color-default-white;
 
   @media (min-width: $vp-768) {
@@ -118,7 +122,7 @@
   position: relative;
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 1px;
     left: 0;
@@ -147,7 +151,7 @@
   position: relative;
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 1px;
     left: 0;
@@ -178,16 +182,12 @@
   font-weight: 400;
   line-height: 150%;
 
-  @media (min-width: $vp-768) {
-  }
-
   @media (min-width: $vp-1200) {
     font-size: 14px;
   }
 }
 
-.comtetition__link {
-  padding: 0;
+.competition__link {
   margin: 0 42px;
   display: block;
   text-align: center;
@@ -225,6 +225,7 @@
 .competition__image {
   padding: 0;
   margin: 0;
+
   & img {
     display: block;
     width: 100%;
