--- a/source/sass/blocks/contacts-form.scss
+++ b/source/sass/blocks/contacts-form.scss
@@ -19,6 +19,7 @@
   @media (min-width: $vp-768) {
     padding: 61px 160px 69px 132px;
   }
+
   @media (min-width: $vp-1200) {
     padding: 56px 170px 62px 103px;
   }
@@ -40,7 +41,7 @@
   margin: 0;
   padding: 0;
   padding-bottom: 43px;
-  font-family: 'Alumni Sans', 'Arial', sans-serif;
+  font-family: "Alumni Sans", "Arial", sans-serif;
   font-weight: 800;
   font-size: 32px;
   letter-spacing: 0.96px;
@@ -81,45 +82,45 @@
 
 .free-class__label {
   width: 100%;
-}
 
-.free-class__input {
-  padding: 0 0 6px;
-  width: 100%;
-  border: none;
-  outline: none;
-  border-bottom: 1px solid $dark-grey;
-  background-color: inherit;
-  color: $color-default-white;
-
-  &::placeholder {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
+  input {
+    padding: 0 0 6px;
+    width: 100%;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid $dark-grey;
+    background-color: inherit;
     color: $color-default-white;
-  }
-
-  &:hover {
-    border-bottom: 1px solid $color-default-white;
-  }
-
-  &:focus-visible,
-  &:active {
-    padding: 5px;
-    padding-left: 20px;
-    border: 1px solid var(--light, #fff);
 
     &::placeholder {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 16px;
       color: $color-default-white;
     }
-  }
 
-  &:disabled {
-    opacity: 0.3;
-  }
+    &:hover {
+      border-bottom: 1px solid $color-default-white;
+    }
 
-  &--error {
-    border-color: $torch-red;
+    &:focus-visible,
+    &:active {
+      border: none;
+      outline: 1px solid var(--light, #ffffff);
+      outline-offset: 5px;
+
+      &::placeholder {
+        color: $color-default-white;
+      }
+    }
+
+    &:disabled {
+      opacity: 0.3;
+    }
+
+    &--error {
+      border-color: $torch-red;
+    }
   }
 }
 
@@ -179,7 +180,7 @@
   margin: 0;
   padding: 0;
   color: $gym-color;
-  font-family: 'Alumni Sans', 'Arial', sans-serif;
+  font-family: "Alumni Sans", "Arial", sans-serif;
   font-size: 32px;
   letter-spacing: 0.96px;
   font-weight: 600;
@@ -212,7 +213,7 @@
 
   @media (min-width: $vp-768) {
     &::before {
-      content: '';
+      content: "";
       width: 1px;
       background-color: $dark-grey;
       position: absolute;
@@ -246,8 +247,6 @@
 
     @media (min-width: $vp-768) {
       font-size: 20px;
-      font-weight: 700;
-      line-height: 150%;
     }
 
     @media (min-width: $vp-1200) {
@@ -262,11 +261,8 @@
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 152.344%;
+    line-height: 152.34%;
     color: $gym-color;
-
-    @media (min-width: $vp-768) {
-    }
 
     @media (min-width: $vp-1200) {
       font-size: 14px;
@@ -276,6 +272,7 @@
 
 .contacts__item-phone {
   order: 3;
+
   @media (min-width: $vp-768) {
     order: 0;
   }
@@ -283,7 +280,4 @@
 
 .contacts__item-email {
   order: 4;
-
-  @media (min-width: $vp-768) {
-  }
 }
