--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -21,9 +21,6 @@
 }
 
 .main-gym__wrapper {
-  @media (min-width: $vp-768) {
-  }
-
   @media (min-width: $vp-1200) {
     padding-top: 38px;
     padding-left: 60px;
@@ -36,7 +33,7 @@
   padding: 0;
   margin-top: 63px;
   color: $gym-color;
-  font-family: 'Alumni Sans', 'Arial', sans-serif;
+  font-family: "Alumni Sans", "Arial", sans-serif;
   font-weight: 600;
   line-height: normal;
   padding-bottom: 5px;
@@ -178,12 +175,13 @@
 
 .main-gym__video-img {
   position: relative;
+
   img {
     height: 167px;
   }
 
   &::after {
-    content: '';
+    content: "";
     display: block;
     width: 100%;
     height: 100%;
@@ -207,13 +205,13 @@
 
 .main-gym__video-btn {
   position: absolute;
-  content: '';
+  content: "";
   width: 100px;
   height: 100px;
 
   border: none;
   background-color: inherit;
-  background-image: url('../img/svg/video-btn.svg');
+  background-image: url("../img/svg/video-btn.svg");
 
   top: 50%;
   left: 50%;
@@ -228,11 +226,11 @@
 
   &:hover,
   &:focus {
-    background-image: url('../img/svg/video-btn-hover.svg');
+    background-image: url("../img/svg/video-btn-hover.svg");
   }
 
   &:disabled {
-    background-image: url(('../img/svg/video-btn-disabled.svg'));
+    background-image: url("../img/svg/video-btn-disabled.svg");
   }
 }
 
