--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -38,7 +38,7 @@
   padding: 0;
   margin: 0;
   text-align: center;
-  font-family: 'Alumni Sans', 'Arial', sans-serif;
+  font-family: "Alumni Sans", "Arial", sans-serif;
   font-weight: 600;
   line-height: normal;
   color: $gym-color;
@@ -68,7 +68,7 @@
   padding-bottom: 12px;
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     bottom: 1px;
     width: 290px;
@@ -119,8 +119,9 @@
 
   &.is-active {
     color: $gym-color;
+
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       bottom: -11px;
       left: 0;
@@ -137,7 +138,6 @@
 
 .subscription__sub-list {
   position: relative;
-  padding: 0;
   margin: 0 auto;
   padding: 40px 0;
   display: none;
@@ -170,7 +170,6 @@
 }
 
 .subscription__sub-item {
-  padding: 0;
   margin: 0;
   padding: 36px 32px;
   padding-bottom: 47px;
@@ -208,7 +207,7 @@
   font-style: normal;
   font-size: 22px;
   font-weight: 700;
-  line-height: 110.156%;
+  line-height: 110.16%;
 
   @media (min-width: $vp-768) {
     font-size: 26px;
@@ -245,9 +244,8 @@
   z-index: 2;
   padding-left: 11px;
 
-  & img {
-    width: 24px;
-    height: 33px;
+  & span {
+    color: $gym-color;
   }
 
   @media (min-width: $vp-768) {
@@ -276,6 +274,7 @@
     font-size: 100px;
     left: 45px;
   }
+
   @media (min-width: $vp-1200) {
     left: 3px;
   }
