--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -90,10 +90,10 @@ input {
 }
 
 // chrome search X removal
-input[type='search']::-webkit-search-decoration,
-input[type='search']::-webkit-search-cancel-button,
-input[type='search']::-webkit-search-results-button,
-input[type='search']::-webkit-search-results-decoration {
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
   appearance: none;
 }
 
@@ -105,20 +105,20 @@ input::-webkit-inner-spin-button {
   appearance: none;
 }
 
-input[type='number'] {
+input[type="number"] {
   appearance: textfield;
 }
 
 // ios button \ inputs reset
 select,
 textarea,
-input:matches([type='email'], [type='number'], [type='password'], [type='search'], [type='tel'], [type='text'], [type='url']) {
+input:matches([type="email"], [type="number"], [type="password"], [type="search"], [type="tel"], [type="text"], [type="url"]) {
   appearance: none;
 }
 
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+[type="button"],
+[type="reset"],
+[type="submit"] {
   appearance: none;
 }
