--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -36,9 +36,9 @@ $fz-default: 16px;
 
 // у некоторых шрифтов в ios возникают проблемы с символом рубля
 // https://www.artlebedev.ru/kovodstvo/sections/159/#13
-$ff-rouble: 'Rouble', 'Arial', sans-serif;
+$ff-rouble: "Rouble", "Arial", sans-serif;
 
-$ff-roboto: 'Roboto', 'Arial', sans-serif;
+$ff-roboto: "Roboto", "Arial", sans-serif;
 
 // Animation
 // ---------------------------------
